excluded jar files pointed from jar manifest's if they do not have a scheme